--- a/Mvc5IdentityExample/Mvc5IdentityExample.Domain/Mvc5IdentityExample.Domain.csproj
+++ b/Mvc5IdentityExample/Mvc5IdentityExample.Domain/Mvc5IdentityExample.Domain.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\IExternalLoginRepository.cs" />
     <Compile Include="Repositories\IRepository.cs" />
+    <Compile Include="Repositories\IRepositoryAsync.cs" />
     <Compile Include="Repositories\IRoleRepository.cs" />
     <Compile Include="Repositories\IUserRepository.cs" />
   </ItemGroup>
