--- a/Mvc5IdentityExample/Mvc5IdentityExample.Data.EntityFramework/Mvc5IdentityExample.Data.EntityFramework.csproj
+++ b/Mvc5IdentityExample/Mvc5IdentityExample.Data.EntityFramework/Mvc5IdentityExample.Data.EntityFramework.csproj
@@ -103,6 +103,7 @@
     <Compile Include="Configuration\UserConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ExternalLoginRepository.cs" />
+    <Compile Include="Repositories\Repository.cs" />
     <Compile Include="Repositories\RepositoryAsync.cs" />
     <Compile Include="Repositories\RoleRepository.cs" />
     <Compile Include="Repositories\UserRepository.cs" />
