--- a/Mvc5IdentityExample/Mvc5IdentityExample.Domain/Mvc5IdentityExample.Domain.csproj
+++ b/Mvc5IdentityExample/Mvc5IdentityExample.Domain/Mvc5IdentityExample.Domain.csproj
@@ -49,7 +49,7 @@
     <Compile Include="Repositories\IRepository.cs" />
     <Compile Include="Repositories\IRepositoryAsync.cs" />
     <Compile Include="Repositories\IRoleRepository.cs" />
-    <Compile Include="Repositories\IUserRepository.cs" />
+    <Compile Include="Repositories\IUserNRepository.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
