--- a/Mvc5IdentityExample/Mvc5IdentityExample.Web/Web.config
+++ b/Mvc5IdentityExample/Mvc5IdentityExample.Web/Web.config
@@ -6,7 +6,7 @@
 <configuration>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Mvc5IdentityExample.Web-20150128011936.mdf;Initial Catalog=aspnet-Mvc5IdentityExample.Web-20150128011936;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="Mvc5IdentityExample" connectionString="Server=(local);Database=Mvc5IdentityExample;UserN Id=Mvc5IdentityExampleUserN;Password=Password123" providerName="System.Data.SqlClient" />    
+    <add name="Mvc5IdentityExample" connectionString="Server=(local);Database=Mvc5IdentityExample;User Id=Mvc5IdentityExampleUser;Password=Password123" providerName="System.Data.SqlClient" />    
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
