--- a/Mvc5IdentityExample/Mvc5IdentityExample.Domain/Mvc5IdentityExample.Domain.csproj
+++ b/Mvc5IdentityExample/Mvc5IdentityExample.Domain/Mvc5IdentityExample.Domain.csproj
@@ -41,15 +41,22 @@
   <ItemGroup>
     <Compile Include="Entities\Claim.cs" />
     <Compile Include="Entities\ExternalLogin.cs" />
+    <Compile Include="Entities\Permission.cs" />
     <Compile Include="Entities\Role.cs" />
-    <Compile Include="Entities\UserN.cs" />
+    <Compile Include="Entities\UserGroup.cs" />
+    <Compile Include="Entities\User.cs" />
+    <Compile Include="ISecurityPermissionService.cs" />
+    <Compile Include="ISecurityPermissionsModule.cs" />
     <Compile Include="IUnitOfWork.cs" />
+    <Compile Include="Permmisions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\IExternalLoginRepository.cs" />
     <Compile Include="Repositories\IRepository.cs" />
     <Compile Include="Repositories\IRepositoryAsync.cs" />
     <Compile Include="Repositories\IRoleRepository.cs" />
     <Compile Include="Repositories\IUserNRepository.cs" />
+    <Compile Include="SecurityPermissionsModule.cs" />
+    <Compile Include="UserManagementSecurityPermissionsModule.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
