--- a/Mvc5IdentityExample/Mvc5IdentityExample.Web/Mvc5IdentityExample.Web.csproj
+++ b/Mvc5IdentityExample/Mvc5IdentityExample.Web/Mvc5IdentityExample.Web.csproj
@@ -20,6 +20,7 @@
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -183,6 +184,8 @@
     </Compile>
     <Compile Include="Identity\IdentityRole.cs" />
     <Compile Include="Identity\IdentityUser.cs" />
+    <Compile Include="Identity\IoC.cs" />
+    <Compile Include="Identity\PermissionRequiredAttribute.cs" />
     <Compile Include="Identity\RoleStore.cs" />
     <Compile Include="Identity\UserStore.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
