--- a/Mvc5IdentityExample/Data.Tests/Data.Tests.csproj
+++ b/Mvc5IdentityExample/Data.Tests/Data.Tests.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Check.cs" />
     <Compile Include="FilterTests.cs" />
     <Compile Include="FilterType.cs" />
     <Compile Include="IFilter.cs" />
